--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -444,18 +444,27 @@ main {
 
 .col.item {
     grid-template: "a a" auto "b b" auto "c d" auto / 1fr 1fr !important;
+
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(var(--border-color));
 }
 
 .col.item .iconUrl {
     grid-area: a;
     justify-self: center;
     align-self: start;
-    max-width: 100%;
+    width: 100%;
+    aspect-ratio: 1/1;
 }
 
 .col.item .title {
     grid-area: b;
     align-self: start;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
 }
 
 .col.item .publishBy {
