--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -36,17 +36,17 @@
     --bottom-color: 255, 255, 255, 0.5;
 }
 
-.aqua #logo>div:first-child,
-.aqua #logo>div:last-child {
+.aqua #logo button >div:first-child,
+.aqua #logo button >div:last-child {
     padding: 0 0.5rem;
 }
 
-.aqua #logo>div:first-child::after {
+.aqua #logo button >div:first-child::after {
     content: url("../ITMedia.svg");
     /* でかさ調整できない */
 }
 
-.aqua #logo>div:last-child::after {
+.aqua #logo button >div:last-child::after {
     content: "IT Media";
     white-space: nowrap;
 }
@@ -60,20 +60,20 @@
     --bottom-color: 255, 225, 225, 0.5;
 }
 
-.red #logo {
+.red #logo button   {
     align-content: end;
 }
 
-.red #logo>div:first-child,
-.red #logo>div:last-child {
+.red #logo button >div:first-child,
+.red #logo button >div:last-child {
     padding: 0 0.25rem;
 }
 
-.red #logo>div:first-child {
+.red #logo button >div:first-child {
     font-size: small;
 }
 
-.red #logo>div:first-child::after {
+.red #logo button >div:first-child::after {
     content: "▶";
 
     font-size: larger;
@@ -85,7 +85,7 @@
     border-radius: 10px;
 }
 
-.red #logo>div:last-child::after {
+.red #logo button >div:last-child::after {
     content: "YouTube";
 }
 
@@ -98,16 +98,16 @@
     --bottom-color: 32, 32, 64, 1;
 }
 
-.dark #logo>div:first-child,
-.dark #logo>div:last-child {
+.dark #logo button >div:first-child,
+.dark #logo button >div:last-child {
     padding: 0 0.25rem;
 }
 
-.dark #logo>div:first-child::after {
+.dark #logo button >div:first-child::after {
     content: "Porn";
 }
 
-.dark #logo>div:last-child::after {
+.dark #logo button >div:last-child::after {
     content: "hub";
 
     color: black;
@@ -222,6 +222,11 @@ main {
 
 #logo {
     grid-area: a;
+    background-color: transparent;
+    font-weight: bolder;
+}
+#logo button{
+    display: flex;
     align-items: center;
 }
 
@@ -319,7 +324,8 @@ main {
     align-items: center;
 }
 
-#contents {
+#contents > div{
+    display: grid !important;
     grid-gap: 2rem;
     grid-template-columns: repeat(auto-fill, minmax(var(--min-width), 1fr));
     grid-template-rows: repeat(auto-fill, minmax(var(--min-height), 1fr));
@@ -342,7 +348,7 @@ main {
     margin-bottom: 10rem;
 }
 
-.top-screen #logo {
+.top-screen #logo button  {
     width: auto;
     justify-content: center;
 
@@ -351,7 +357,7 @@ main {
     margin-right: auto;
 }
 
-.top-screen #logo div::after {
+.top-screen #logo button  div::after {
     font-size: xxx-large;
     font-weight: bolder;
 }
@@ -455,10 +461,13 @@ main {
 
 .col.item .iconUrl {
     grid-area: a;
-    justify-self: center;
-    align-self: start;
+
+    display: flex;
     width: 100%;
-    aspect-ratio: 1/1;
+    height: 150px;
+    align-items: center;
+    justify-items: center;
+    object-fit: cover;
 }
 
 .col.item .title {
@@ -568,11 +577,6 @@ main {
     }
 }
 
-#logo {
-    background-color: transparent;
-
-    font-weight: bolder;
-}
 
 .scrolling {}
 
