--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html class="top-screen" xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
-<head th:replace="common :: common-head">
+<head>
 	<title>View in VSCode</title>
 
 	<meta charset="UTF-8">
@@ -75,7 +75,7 @@
 		<div class="container">
 			<div class="row mb-2 d-grid align-items-center" id="aiueo">
 				<span id="logo" class="d-flex">
-					<button class="btn fs-3 fw-bolder">
+					<button class="m-4 btn fs-3 fw-bolder">
 						<div></div>
 						<div></div>
 					</button>
