--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@
 		<div class="container">
 			<div class="row mb-2 d-grid align-items-center" id="aiueo">
 				<span id="logo" class="d-flex">
-					<button class="m-4 btn fs-3 fw-bolder">
+					<button class="mb-4 btn fs-3 fw-bolder">
 						<div></div>
 						<div></div>
 					</button>
