--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -275,7 +275,7 @@
 					<section>
 						<div>Bitcoin/日本円</div>
 						<span th:text="*{bitcoin}"></span>
-						<span th:text="|*{rate} %|"></span>
+						<span th:text="*{rate}"></span>
 					</section>
 				</div>
 			</div>
